--- a/pages/code/asdocs/all-index-H.html
+++ b/pages/code/asdocs/all-index-H.html
@@ -111,6 +111,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("HÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/TextFieldUtil.html#handleFieldFocus()">handleFieldFocus</a>(event) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/TextFieldUtil.html">TextFieldUtil</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Handle focusing the text field.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/FrameSprite.html#handleFrame()">handleFrame</a>(... rest) &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/FrameSprite.html">FrameSprite</a></td>
 </tr>
 <tr>
