--- a/pages/code/asdocs/all-index-P.html
+++ b/pages/code/asdocs/all-index-P.html
@@ -669,7 +669,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 </tr>
 <tr>
 <td width="20"></td><td>
-     Accesses the global properties for this game.</td>
+     Accesses the properties for this room.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/OfflinePlayerPropertyControl.html#_props">_props</a> &mdash; Property in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/OfflinePlayerPropertyControl.html">OfflinePlayerPropertyControl</a></td>
