--- a/pages/code/asdocs/all-index-S.html
+++ b/pages/code/asdocs/all-index-S.html
@@ -374,6 +374,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
      Assigns an object to decorate a mob.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/TextFieldUtil.html#setFocusable()">setFocusable</a>(field) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/TextFieldUtil.html">TextFieldUtil</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Add a special MouseEvent.CLICK listener so that the specified field is focusable
+     even inside a security boundary.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/LocalSubControl.html#setFrameRate()">setFrameRate</a>(frameRate) &mdash; Method in class com.whirled.game.<a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/LocalSubControl.html">LocalSubControl</a></td>
 </tr>
 <tr>
