--- a/pages/code/asdocs/com/whirled/avrg/GameSubControlServer.html
+++ b/pages/code/asdocs/com/whirled/avrg/GameSubControlServer.html
@@ -66,7 +66,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#props">props</a> : <a href="../net/PropertySubControl.html">PropertySubControl</a>
 <div class="summaryTableDescription">[read-only]
-     Accesses the global properties for this game.</div>
+     Accesses the properties for this room.</div>
 </td><td class="summaryTableOwnerCol">GameSubControlServer</td>
 </tr>
 </table>
@@ -253,10 +253,10 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>props:<a href="../net/PropertySubControl.html">PropertySubControl</a></code>&nbsp;&nbsp;[read-only]<p>
-     Accesses the global properties for this game. Properties may be persisted and will be
-     restored when the server agent restarts. Persistent properties should only be used when
-     genuinely necessary.
-     </p><span class="label">Implementation</span>
+     Accesses the properties for this room. Game properties marked as such will be persisted
+     and restored whenever the server agent starts. Persistent properties should only be used
+     when genuinely necessary.
+          </p><span class="label">Implementation</span>
 <br>
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function get props():<a href="../net/PropertySubControl.html">PropertySubControl</a></code>
 <br>
