--- a/pages/code/asdocs/com/whirled/avrg/RoomSubControlServer.html
+++ b/pages/code/asdocs/com/whirled/avrg/RoomSubControlServer.html
@@ -323,9 +323,9 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>props:<a href="../net/PropertySubControl.html">PropertySubControl</a></code>&nbsp;&nbsp;[read-only]<p>
-     Accesses the properties for this room. Properties may be persisted and will be restored
-     whenever the room is occupied anew.
-     </p><span class="label">Implementation</span>
+     Accesses the properties for this room. Room properties marked as such will be persisted
+     and restored whenever the room is occupied anew.
+          </p><span class="label">Implementation</span>
 <br>
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function get props():<a href="../net/PropertySubControl.html">PropertySubControl</a></code>
 <br>
