--- a/pages/code/contrib/asdocs/all-classes.html
+++ b/pages/code/contrib/asdocs/all-classes.html
@@ -172,9 +172,6 @@
 <td><a href="com/whirled/contrib/display/ClickAnimateFurniture.html">ClickAnimateFurniture</a></td>
 </tr>
 <tr>
-<td><a href="com/whirled/contrib/platformer/client/ClientCutSceneController.html">ClientCutSceneController</a></td>
-</tr>
-<tr>
 <td><a href="com/whirled/contrib/avrg/probe/ClientPanel.html">ClientPanel</a></td>
 </tr>
 <tr>
@@ -212,21 +209,6 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/Configurator.html">Configurator</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/contrib/platformer/piece/CutScene.html">CutScene</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/contrib/platformer/game/CutSceneCollisionHandler.html">CutSceneCollisionHandler</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/contrib/platformer/game/CutSceneController.html">CutSceneController</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/contrib/platformer/display/CutSceneSprite.html">CutSceneSprite</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/game/DeathEventTrigger.html">DeathEventTrigger</a></td>
@@ -725,6 +707,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/board/ShotTask.html">ShotTask</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/game/ShutdownController.html"><i>ShutdownController</i></a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/SimObject.html">SimObject</a></td>
