--- a/pages/code/contrib/asdocs/all-index-D.html
+++ b/pages/code/contrib/asdocs/all-index-D.html
@@ -187,6 +187,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html#_deathLayer">_deathLayer</a> &mdash; Property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html">ActorSpriteLayer</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Debug.html#debug">debug</a> &mdash; Static property in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Debug.html">Debug</a></td>
 </tr>
 <tr>
@@ -224,6 +230,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/SimpleActorBounds.html#DEBUG">DEBUG</a> &mdash; Constant static property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/SimpleActorBounds.html">SimpleActorBounds</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/ThrottlingMessageManager.html#DEBUG">DEBUG</a> &mdash; Constant static property in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/ThrottlingMessageManager.html">ThrottlingMessageManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -835,31 +847,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
      Returns the dot product of this line and the supplied point.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#_doubleTap">_doubleTap</a> &mdash; Property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_doubleTap">_doubleTap</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#DOUBLE_TAP">DOUBLE_TAP</a> &mdash; Constant static property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#DOUBLE_TAP">DOUBLE_TAP</a> &mdash; Constant static property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#_downKeys">_downKeys</a> &mdash; Property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -923,12 +917,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#_dx">_dx</a> &mdash; Property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html#_dx">_dx</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/KeyboardController.html">KeyboardController</a></td>
 </tr>
 <tr>
@@ -954,12 +942,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/DynamicTree.html#_dxml">_dxml</a> &mdash; Property in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/DynamicTree.html">DynamicTree</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html#_dy">_dy</a> &mdash; Property in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/Controller.html">Controller</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
