--- a/pages/code/contrib/asdocs/all-index-E.html
+++ b/pages/code/contrib/asdocs/all-index-E.html
@@ -377,12 +377,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
  return to its basic animation state.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CutSceneSprite.html#END">END</a> &mdash; Constant static property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CutSceneSprite.html">CutSceneSprite</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html#END_TOKEN">END_TOKEN</a> &mdash; Constant static property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html">Chunker</a></td>
 </tr>
 <tr>
@@ -396,6 +390,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Dynamic.html#ENEMY">ENEMY</a> &mdash; Constant static property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Dynamic.html">Dynamic</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Dynamic.html#enemyCount">enemyCount</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Dynamic.html">Dynamic</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Spawner.html#enemyCount">enemyCount</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Spawner.html">Spawner</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -468,6 +474,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/util/class-list.html');" href="com/whirled/contrib/platformer/util/Maths.html#EPSILON">EPSILON</a> &mdash; Constant static property in class com.whirled.contrib.platformer.util.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/util/class-list.html');" href="com/whirled/contrib/platformer/util/Maths.html">Maths</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Card.html#equals()">equals</a>(rhs:<a href="com/whirled/contrib/card/Card.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/card./class-list.html');">com.whirled.contrib.card:Card</a>) &mdash; Method in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Card.html">Card</a></td>
 </tr>
 <tr>
@@ -478,6 +490,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 </tr>
 <tr>
 <td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/util/class-list.html');" href="com/whirled/contrib/platformer/util/Maths.html#equalsy()">equalsy</a>(a, b) &mdash; Static method in class com.whirled.contrib.platformer.util.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/util/class-list.html');" href="com/whirled/contrib/platformer/util/Maths.html">Maths</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Compares two numbers to be within minimal difference.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ImageResource.html#_errorCallback">_errorCallback</a> &mdash; Property in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ImageResource.html">ImageResource</a></td>
