--- a/pages/code/contrib/asdocs/all-index-R.html
+++ b/pages/code/contrib/asdocs/all-index-R.html
@@ -708,6 +708,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html#removeDS()">removeDS</a>(ds:<a href="com/whirled/contrib/platformer/display/DynamicSprite.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display./class-list.html');">com.whirled.contrib.platformer.display:DynamicSprite</a>) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html">ActorSpriteLayer</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSpriteLayer.html#removeDS()">removeDS</a>(ds:<a href="com/whirled/contrib/platformer/display/DynamicSprite.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display./class-list.html');">com.whirled.contrib.platformer.display:DynamicSprite</a>) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSpriteLayer.html">DynamicSpriteLayer</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Board.html#removeDynamic()">removeDynamic</a>(d:<a href="com/whirled/contrib/platformer/piece/Dynamic.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece./class-list.html');">com.whirled.contrib.platformer.piece:Dynamic</a>) &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Board.html">Board</a></td>
 </tr>
 <tr>
@@ -831,12 +843,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/MultDynamicDetail.html#removeVar()">removeVar</a>(event) &mdash; Method in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/MultDynamicDetail.html">MultDynamicDetail</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CutSceneSprite.html#REPEAT">REPEAT</a> &mdash; Constant static property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CutSceneSprite.html">CutSceneSprite</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
