--- a/pages/code/contrib/asdocs/all-index-S.html
+++ b/pages/code/contrib/asdocs/all-index-S.html
@@ -1460,6 +1460,24 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSprite.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSprite.html">ActorSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html">BoardSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSprite.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSprite.html">DynamicSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/DynamicController.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/DynamicController.html">DynamicController</a></td>
 </tr>
 <tr>
@@ -1467,6 +1485,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html">GameController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/ShutdownController.html#shutdown()">shutdown</a>() &mdash; Method in interface com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/ShutdownController.html">ShutdownController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1512,6 +1536,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html">ResourceManager</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/ShutdownController.html"><i>ShutdownController</i></a> &mdash; Interface in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/package-detail.html">com.whirled.contrib.platformer.game</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1795,6 +1825,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/ClientPlatformerController.html#_source">_source</a> &mdash; Property in class com.whirled.contrib.platformer.client.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/client/class-list.html');" href="com/whirled/contrib/platformer/client/ClientPlatformerController.html">ClientPlatformerController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ParallaxBitmap.html#_source">_source</a> &mdash; Property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ParallaxBitmap.html">ParallaxBitmap</a></td>
 </tr>
 <tr>
@@ -1993,19 +2029,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html#spawnX">spawnX</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html">CutScene</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Spawner.html#spawnXML">spawnXML</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Spawner.html">Spawner</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html#spawnY">spawnY</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html">CutScene</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -2076,24 +2100,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 </tr>
 <tr>
 <td width="20"></td><td> Internal storage for the stack.</td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html#stage">stage</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html">CutScene</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/CutSceneController.html#_stageChanges">_stageChanges</a> &mdash; Property in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/CutSceneController.html">CutSceneController</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html#stageChanges">stageChanges</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/CutScene.html">CutScene</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/CardArray.html#standardSort()">standardSort</a>(suits, ordering) &mdash; Method in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/CardArray.html">CardArray</a></td>
