--- a/pages/code/contrib/asdocs/all-index-W.html
+++ b/pages/code/contrib/asdocs/all-index-W.html
@@ -167,6 +167,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("WÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Actor.html#_width">_width</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Actor.html">Actor</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Actor.html#width">width</a> &mdash; Property in class com.whirled.contrib.platformer.piece.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/Actor.html">Actor</a></td>
 </tr>
 <tr>
