--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/class-list.html
@@ -28,6 +28,9 @@
 <td><a href="ShootableController.html"><i>ShootableController</i></a></td>
 </tr>
 <tr>
+<td><a href="ShutdownController.html"><i>ShutdownController</i></a></td>
+</tr>
+<tr>
 <td><a href="TickController.html"><i>TickController</i></a></td>
 </tr>
 <tr>
@@ -50,12 +53,6 @@
 </tr>
 <tr>
 <td><a href="CollisionHandler.html">CollisionHandler</a></td>
-</tr>
-<tr>
-<td><a href="CutSceneCollisionHandler.html">CutSceneCollisionHandler</a></td>
-</tr>
-<tr>
-<td><a href="CutSceneController.html">CutSceneController</a></td>
 </tr>
 <tr>
 <td><a href="DeathEventTrigger.html">DeathEventTrigger</a></td>
