--- a/pages/code/asdocs/com/whirled/BackdropControl.html
+++ b/pages/code/asdocs/com/whirled/BackdropControl.html
@@ -81,9 +81,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="EntityControl.html#canEditRoom()">canEditRoom</a>():Boolean</div>
+<a class="signatureLink" href="EntityControl.html#canManageRoom()">canManageRoom</a>(memberId:int = 0):Boolean</div>
 <div class="summaryTableDescription">
-     Returns true if the local client has editing privileges in the current room.</div>
+     Returns true if the local client has management privileges in the current room.</div>
 </td><td class="summaryTableOwnerCol"><a href="EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedMethod">
