--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/PlatformerContext.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/PlatformerContext.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../print.css" type="text/css" media="print">
-<meta content="PlatformerContext,com.whirled.contrib.platformer.PlatformerContext,board,controller,gctrl,net,pfac,platformer" name="keywords">
+<meta content="PlatformerContext,com.whirled.contrib.platformer.PlatformerContext,board,controller,gctrl,local,net,pfac,platformer,inControl" name="keywords">
 <title>com.whirled.contrib.platformer.PlatformerContext</title>
 </head>
 <body>
@@ -68,6 +68,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">PlatformerContext</td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#inControl">inControl</a> : Boolean<div class="summaryTableDescription">[static][read-only]</div>
+</td><td class="summaryTableOwnerCol">PlatformerContext</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#local">local</a> : Boolean<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">PlatformerContext</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#net">net</a> : <a href="net/MessageManager.html">MessageManager</a>
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">PlatformerContext</td>
@@ -117,6 +125,27 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public static var gctrl:GameControl</code>
+</div>
+<a name="inControl"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">inControl</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>inControl:Boolean</code>&nbsp;&nbsp;[read-only]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public static function get inControl():Boolean</code>
+<br>
+</div>
+<a name="local"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">local</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static var local:Boolean</code>
 </div>
 <a name="net"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
