--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/client/ClientPlatformerContext.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/client/ClientPlatformerContext.html
@@ -80,10 +80,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../PlatformerContext.html#gctrl">gctrl</a> : GameControl<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol"><a href="../PlatformerContext.html">PlatformerContext</a></td>
 </tr>
+<tr class="hideInheritedProperty">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../PlatformerContext.html#inControl">inControl</a> : Boolean<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol"><a href="../PlatformerContext.html">PlatformerContext</a></td>
+</tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#keyboard">keyboard</a> : <a href="../client/KeyboardController.html">KeyboardController</a>
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">ClientPlatformerContext</td>
+</tr>
+<tr class="hideInheritedProperty">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../PlatformerContext.html#local">local</a> : Boolean<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol"><a href="../PlatformerContext.html">PlatformerContext</a></td>
 </tr>
 <tr class="hideInheritedProperty">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="../PlatformerContext.html#net">net</a> : <a href="../net/MessageManager.html">MessageManager</a>
