--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/ActorSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/ActorSprite.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="ActorSprite,com.whirled.contrib.platformer.display.ActorSprite,TURN,_actor,_oldDx,_oldDy,actionComplete,changeState,getActor,handleActionComplete,setStatic,update" name="keywords">
+<meta content="ActorSprite,com.whirled.contrib.platformer.display.ActorSprite,TURN,_actor,_oldDx,_oldDy,actionComplete,changeState,getActor,handleActionComplete,setStatic,shutdown,update" name="keywords">
 <title>com.whirled.contrib.platformer.display.ActorSprite</title>
 </head>
 <body>
@@ -158,6 +158,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#setStatic()">setStatic</a>(s:Boolean):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">ActorSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">ActorSprite</td>
 </tr>
@@ -450,6 +457,15 @@ showHideInherited();
 <td width="20px"></td><td><code><span class="label">s</span>:Boolean</code></td>
 </tr>
 </table>
+</div>
+<a name="shutdown()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public override function shutdown():void</code>
 </div>
 <a name="update()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
