--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="DynamicSprite,com.whirled.contrib.platformer.display.DynamicSprite,HIT_LENGTH,_disp,_dynamic,_hitFilter,_hitFilterIndex,_hitLeft,_particleCallback,_state,_static,changeState,findNode,findNodes,generateAttachedEffect,generateParticleEffect,getDynamic,handleAdded,handleRemoved,onAdded,onRemoved,playState,recolorNodes,recolorNodesToColor,setParticleCallback,setStatic,showHit,update" name="keywords">
+<meta content="DynamicSprite,com.whirled.contrib.platformer.display.DynamicSprite,HIT_LENGTH,_disp,_dynamic,_hitFilter,_hitFilterIndex,_hitLeft,_particleCallback,_state,_static,changeState,findNode,findNodes,generateAttachedEffect,generateParticleEffect,getDynamic,handleAdded,handleRemoved,onAdded,onRemoved,playState,recolorNodes,recolorNodesToColor,setParticleCallback,setStatic,showHit,shutdown,update" name="keywords">
 <title>com.whirled.contrib.platformer.display.DynamicSprite</title>
 </head>
 <body>
@@ -41,7 +41,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="classHeaderTableLabel">Inheritance</td><td class="inheritanceList">DynamicSprite <img class="inheritArrow" alt="Inheritance" title="Inheritance" src="../../../../../images/inherit-arrow.gif"> flash.display.Sprite</td>
 </tr>
 <tr>
-<td class="classHeaderTableLabel">Subclasses</td><td><a href="../display/ActorSprite.html">ActorSprite</a>, <a href="../display/CutSceneSprite.html">CutSceneSprite</a>, <a href="../display/HoverSprite.html">HoverSprite</a>, <a href="../display/ShotSprite.html">ShotSprite</a>, <a href="../display/SpawnerSprite.html">SpawnerSprite</a></td>
+<td class="classHeaderTableLabel">Subclasses</td><td><a href="../display/ActorSprite.html">ActorSprite</a>, <a href="../display/HoverSprite.html">HoverSprite</a>, <a href="../display/ShotSprite.html">ShotSprite</a>, <a href="../display/SpawnerSprite.html">SpawnerSprite</a></td>
 </tr>
 </table>
 <p></p>
@@ -124,6 +124,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#setStatic()">setStatic</a>(s:Boolean):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">DynamicSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">DynamicSprite</td>
 </tr>
@@ -661,6 +668,15 @@ showHideInherited();
 <td width="20px"></td><td><code><span class="label">length</span>:Number</code></td>
 </tr>
 </table>
+</div>
+<a name="shutdown()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function shutdown():void</code>
 </div>
 <a name="update()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
