--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSpriteLayer.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSpriteLayer.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="DynamicSpriteLayer,com.whirled.contrib.platformer.display.DynamicSpriteLayer,_dynamics,addDynamicSprite,removeDynamicSprite,updateSprites" name="keywords">
+<meta content="DynamicSpriteLayer,com.whirled.contrib.platformer.display.DynamicSpriteLayer,_dynamics,addDynamicSprite,removeDS,removeDynamicSprite,updateSprites" name="keywords">
 <title>com.whirled.contrib.platformer.display.DynamicSpriteLayer</title>
 </head>
 <body>
@@ -119,6 +119,22 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 </table>
 </div>
+<a name="protectedMethodSummary"></a>
+<div class="summarySection">
+<div class="summaryTableTitle">Protected Methods</div>
+<table id="summaryTableProtectedMethod" class="summaryTable " cellpadding="3" cellspacing="0">
+<tr>
+<th>&nbsp;</th><th colspan="2">Method</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#removeDS()">removeDS</a>(ds:<a href="DynamicSprite.html">DynamicSprite</a>):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">DynamicSpriteLayer</td>
+</tr>
+</table>
+</div>
 <script type="text/javascript" language="javascript">
 <!--
 showHideInherited();
@@ -145,6 +161,20 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public function addDynamicSprite(ds:<a href="DynamicSprite.html">DynamicSprite</a>):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">ds</span>:<a href="DynamicSprite.html">DynamicSprite</a></code></td>
+</tr>
+</table>
+</div>
+<a name="removeDS()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">removeDS</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function removeDS(ds:<a href="DynamicSprite.html">DynamicSprite</a>):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">ds</span>:<a href="DynamicSprite.html">DynamicSprite</a></code></td>
