--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/DynamicController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/DynamicController.html
@@ -38,7 +38,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="classHeaderTableLabel">Class</td><td class="classSignature">public class DynamicController</td>
 </tr>
 <tr>
-<td class="classHeaderTableLabel">Implements</td><td><a href="CollisionController.html">CollisionController</a>, <a href="TickController.html">TickController</a></td>
+<td class="classHeaderTableLabel">Implements</td><td><a href="CollisionController.html">CollisionController</a>, <a href="ShutdownController.html">ShutdownController</a>, <a href="TickController.html">TickController</a></td>
 </tr>
 <tr>
 <td class="classHeaderTableLabel">Subclasses</td><td><a href="../game/ActorController.html">ActorController</a>, <a href="../game/RectDynamicController.html">RectDynamicController</a>, <a href="../game/ShotController.html">ShotController</a></td>
