--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/package-detail.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/package-detail.html
@@ -51,9 +51,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><i><a href="ShootableController.html">ShootableController</a></i></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow1">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><i><a href="TickController.html">TickController</a></i></td><td class="summaryTableLastCol">&nbsp;</td>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><i><a href="ShutdownController.html">ShutdownController</a></i></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><i><a href="TickController.html">TickController</a></i></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><i><a href="WalkableController.html">WalkableController</a></i></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 </table>
@@ -74,12 +77,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 </tr>
 <tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="CollisionHandler.html">CollisionHandler</a></td><td class="summaryTableLastCol">&nbsp;</td>
-</tr>
-<tr class="prow1">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="CutSceneCollisionHandler.html">CutSceneCollisionHandler</a></td><td class="summaryTableLastCol">&nbsp;</td>
-</tr>
-<tr class="prow0">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="CutSceneController.html">CutSceneController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DeathEventTrigger.html">DeathEventTrigger</a></td><td class="summaryTableLastCol">
