--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Actor.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Actor.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Actor,com.whirled.contrib.platformer.piece.Actor,ACT_COUNT,HIT_BACK,HIT_BIG,HIT_FRONT,ORIENT_LEFT,ORIENT_RIGHT,ORIENT_SHOOT_D,ORIENT_SHOOT_F,ORIENT_SHOOT_MASK,ORIENT_SHOOT_U,ORIENT_TURNING,U_HEALTH,U_HIT,U_ORIENT,U_SHOOT,_attached,_attachedId,_bounds,_health,_justShot,_orient,_shooting,_wasHit,accelX,accelY,events,height,maxAttachable,maxWalkable,projCollider,startHealth,width,attached,attachedId,health,justShot,orient,shooting,wasHit,doesHit,fromBytes,getBounds,orientBody,orientShoot,setAttached,shouldSpawn,toBytes,toString" name="keywords">
+<meta content="Actor,com.whirled.contrib.platformer.piece.Actor,ACT_COUNT,HIT_BACK,HIT_BIG,HIT_FRONT,ORIENT_LEFT,ORIENT_RIGHT,ORIENT_SHOOT_B,ORIENT_SHOOT_D,ORIENT_SHOOT_F,ORIENT_SHOOT_MASK,ORIENT_SHOOT_U,ORIENT_TURNING,U_ACCEL,U_HEALTH,U_HIT,U_ORIENT,U_SHOOT,_accelX,_accelY,_attached,_attachedId,_bounds,_health,_height,_justShot,_orient,_shooting,_wasHit,_width,events,maxAttachable,maxWalkable,projCollider,startHealth,accelX,accelY,attached,attachedId,health,height,justShot,orient,shooting,wasHit,width,doesHit,fromBytes,getBounds,isOrientShootDown,isOrientShootUp,orientBody,orientShoot,setAttached,shouldSpawn,toBytes,toString" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Actor</title>
 </head>
 <body>
@@ -63,11 +63,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#accelX">accelX</a> : Number = 0<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#accelX">accelX</a> : Number<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#accelY">accelY</a> : Number = 0<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#accelY">accelY</a> : Number<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
@@ -87,6 +87,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="Dynamic.html#dy">dy</a> : Number<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
 </tr>
+<tr class="hideInheritedProperty">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="Dynamic.html#enemyCount">enemyCount</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
+</tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#events">events</a> : Array<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
@@ -96,7 +100,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#height">height</a> : Number = 0<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#height">height</a> : Number<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="hideInheritedProperty">
@@ -152,7 +156,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#width">width</a> : Number = 0<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#width">width</a> : Number<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="hideInheritedProperty">
@@ -181,6 +185,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_accelX">_accelX</a> : Number = 0<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_accelY">_accelY</a> : Number = 0<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_attached">_attached</a> : <a href="../board/LineData.html">LineData</a>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
@@ -204,6 +216,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_health">_health</a> : Number<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_height">_height</a> : Number = 0<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="hideInheritedProtectedProperty">
@@ -232,6 +248,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_wasHit">_wasHit</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_width">_width</a> : Number = 0<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 </table>
@@ -311,6 +331,27 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#isOrientShootDown()">isOrientShootDown</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#isOrientShootUp()">isOrientShootUp</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="hideInheritedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="Dynamic.html#needServerController()">needServerController</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#orientBody()">orientBody</a>(body:int):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
@@ -382,7 +423,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Constant</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#ACT_COUNT">ACT_COUNT</a> : int = 6<div class="summaryTableDescription">[static]</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#ACT_COUNT">ACT_COUNT</a> : int = 7<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="hideInheritedConstant">
@@ -419,6 +460,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#ORIENT_RIGHT">ORIENT_RIGHT</a> : int = 1<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#ORIENT_SHOOT_B">ORIENT_SHOOT_B</a> : int<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
@@ -462,6 +507,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#U_ACCEL">U_ACCEL</a> : int<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#U_HEALTH">U_HEALTH</a> : int<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
@@ -498,14 +547,37 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
-<a name="accelX"></a>
+<a name="_accelX"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">accelX</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">_accelX</td><td class="detailHeaderType">property</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>public var accelX:Number = 0</code>
+<code>protected var _accelX:Number = 0</code>
+</div>
+<a name="accelX"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">accelX</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>accelX:Number</code>&nbsp;&nbsp;[read-write]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get accelX():Number</code>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function set accelX(value:Number):void</code>
+<br>
+</div>
+<a name="_accelY"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_accelY</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _accelY:Number = 0</code>
 </div>
 <a name="accelY"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -514,7 +586,12 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public var accelY:Number = 0</code>
+<code>accelY:Number</code>&nbsp;&nbsp;[read-write]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get accelY():Number</code>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function set accelY(value:Number):void</code>
+<br>
 </div>
 <a name="_attached"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -599,6 +676,15 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function set health(value:Number):void</code>
 <br>
 </div>
+<a name="_height"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_height</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _height:Number = 0</code>
+</div>
 <a name="height"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -606,7 +692,12 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public var height:Number = 0</code>
+<code>height:Number</code>&nbsp;&nbsp;[read-write]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get height():Number</code>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function set height(value:Number):void</code>
+<br>
 </div>
 <a name="_justShot"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -736,6 +827,15 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function set wasHit(value:int):void</code>
 <br>
 </div>
+<a name="_width"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_width</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _width:Number = 0</code>
+</div>
 <a name="width"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -743,7 +843,12 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public var width:Number = 0</code>
+<code>width:Number</code>&nbsp;&nbsp;[read-write]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get width():Number</code>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function set width(value:Number):void</code>
+<br>
 </div>
 <a name="constructorDetail"></a>
 <div class="detailSectionHeader">Constructor detail</div>
@@ -817,6 +922,38 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20"></td><td><code><a href="../piece/Rect.html">Rect</a></code></td>
+</tr>
+</table>
+</div>
+<a name="isOrientShootDown()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">isOrientShootDown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function isOrientShootDown():Boolean</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code></td>
+</tr>
+</table>
+</div>
+<a name="isOrientShootUp()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">isOrientShootUp</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function isOrientShootUp():Boolean</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code></td>
 </tr>
 </table>
 </div>
@@ -930,7 +1067,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const ACT_COUNT:int = 6</code>
+<code>public static const ACT_COUNT:int = 7</code>
 </div>
 <a name="HIT_BACK"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -977,6 +1114,15 @@ showHideInherited();
 <div class="detailBody">
 <code>public static const ORIENT_RIGHT:int = 1</code>
 </div>
+<a name="ORIENT_SHOOT_B"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">ORIENT_SHOOT_B</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const ORIENT_SHOOT_B:int</code>
+</div>
 <a name="ORIENT_SHOOT_D"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1021,6 +1167,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public static const ORIENT_TURNING:int</code>
+</div>
+<a name="U_ACCEL"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">U_ACCEL</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const U_ACCEL:int</code>
 </div>
 <a name="U_HEALTH"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
