--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Dynamic.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Dynamic.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Dynamic,com.whirled.contrib.platformer.piece.Dynamic,DEAD,DYN_COUNT,ENEMY,GLOBAL,OWN_ALL,OWN_PLAYER,OWN_SERVER,PLAYER,SPAWN,U_INTER,U_POS,U_VEL,_dx,_dy,_inState,_inter,_owner,id,sprite,updateState,x,y,dx,dy,inter,owner,amOwner,equals,fromBytes,getBounds,hashCode,isAlive,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
+<meta content="Dynamic,com.whirled.contrib.platformer.piece.Dynamic,DEAD,DYN_COUNT,ENEMY,GLOBAL,OWN_ALL,OWN_PLAYER,OWN_SERVER,PLAYER,SPAWN,U_INTER,U_POS,U_VEL,_dx,_dy,_inState,_inter,_owner,id,sprite,updateState,x,y,dx,dy,enemyCount,inter,owner,amOwner,equals,fromBytes,getBounds,hashCode,isAlive,needServerController,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Dynamic</title>
 </head>
 <body>
@@ -63,6 +63,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#dy">dy</a> : Number<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Dynamic</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#enemyCount">enemyCount</a> : int<div class="summaryTableDescription">[read-only]</div>
 </td><td class="summaryTableOwnerCol">Dynamic</td>
 </tr>
 <tr class="">
@@ -178,6 +182,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#isAlive()">isAlive</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Dynamic</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#needServerController()">needServerController</a>():Boolean</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Dynamic</td>
 </tr>
@@ -319,6 +330,18 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function get dy():Number</code>
 <br>
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function set dy(value:Number):void</code>
+<br>
+</div>
+<a name="enemyCount"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">enemyCount</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>enemyCount:int</code>&nbsp;&nbsp;[read-only]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get enemyCount():int</code>
 <br>
 </div>
 <a name="id"></a>
@@ -530,6 +553,22 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public function isAlive():Boolean</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code></td>
+</tr>
+</table>
+</div>
+<a name="needServerController()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">needServerController</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function needServerController():Boolean</code>
 <p></p>
 <span class="label">Returns</span>
 <table border="0" cellspacing="0" cellpadding="0">
