--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Spawner.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Spawner.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Spawner,com.whirled.contrib.platformer.piece.Spawner,U_HEALTH,U_SPAWN,_health,_spawnCount,_spawning,_wasHit,deathEffect,deathInterval,destructable,maxConcurrent,offX,spawnDelay,spawnInterval,spawnXML,spawns,totalSpawns,health,spawnCount,spawning,wasHit,fromBytes,isAlive,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
+<meta content="Spawner,com.whirled.contrib.platformer.piece.Spawner,U_HEALTH,U_SPAWN,_health,_spawnCount,_spawning,_wasHit,deathEffect,deathInterval,destructable,maxConcurrent,offX,spawnDelay,spawnInterval,spawnXML,spawns,totalSpawns,enemyCount,health,spawnCount,spawning,wasHit,fromBytes,isAlive,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Spawner</title>
 </head>
 <body>
@@ -80,6 +80,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedProperty">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="Dynamic.html#dy">dy</a> : Number<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#enemyCount">enemyCount</a> : int<div class="summaryTableDescription">[read-only]</div>
+</td><td class="summaryTableOwnerCol">Spawner</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#health">health</a> : Number<div class="summaryTableDescription"></div>
@@ -281,6 +285,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Spawner</td>
 </tr>
+<tr class="hideInheritedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="Dynamic.html#needServerController()">needServerController</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
+</tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
@@ -417,6 +428,18 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public var destructable:Boolean</code>
+</div>
+<a name="enemyCount"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">enemyCount</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>enemyCount:int</code>&nbsp;&nbsp;[read-only]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get enemyCount():int</code>
+<br>
 </div>
 <a name="_health"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
